--- a/cv-template/index.html
+++ b/cv-template/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<!-- saved from url=(0128)file:///D:/working/zenith%E8%B5%84%E6%96%99/github%E5%88%B6%E4%BD%9C%E7%AE%80%E5%8E%86/resume/cv-template/cv-template/index.html -->
+<!-- saved from url=(0116)file:///D:/working/zenith%E8%B5%84%E6%96%99/github%E5%88%B6%E4%BD%9C%E7%AE%80%E5%8E%86/resume/cv-template/index.html -->
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     
     <title>简历生成器</title>
-    <link rel="stylesheet" href="./简历生成器_files/style.css">
-    <link rel="stylesheet" href="./简历生成器_files/remodal.css">
-    <link rel="stylesheet" href="./简历生成器_files/remodal-default-theme.min.css">
-    <script src="./简历生成器_files/jquery.min.js.下载"></script>
-    <script src="./简历生成器_files/remodal.min.js.下载"></script>
-    <script src="./简历生成器_files/script.js.下载"></script>
+    <link rel="stylesheet" href="./index_files/style.css">
+    <link rel="stylesheet" href="./index_files/remodal.css">
+    <link rel="stylesheet" href="./index_files/remodal-default-theme.min.css">
+    <script src="./index_files/jquery.min.js.下载"></script>
+    <script src="./index_files/remodal.min.js.下载"></script>
+    <script src="./index_files/script.js.下载"></script>
 </head>
 
 <body>
@@ -25,9 +25,9 @@
                 <hr>
                 <ul class="info-list">
                     <li>
-                        <label class="left-label" contenteditable="true">姓名</label><span class="label-value" contenteditable="true">XXX</span><span class="item-remove"><i class="iconfont icon-delete"></i></span></li>
+                        <label class="left-label" contenteditable="true">姓名</label><span class="label-value" contenteditable="true">郭杨路</span><span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li>
                     <li>
-                        <label class="left-label" contenteditable="true">学历</label><span class="label-value" contenteditable="true">本科</span><span class="item-remove"><i class="iconfont icon-delete"></i></span></li>
+                        <label class="left-label" contenteditable="true">学历</label><span class="label-value" contenteditable="true">本科</span><span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li>
                     <li>
                         <label class="left-label" contenteditable="true">毕业院校</label><span class="label-value" contenteditable="true">北京邮电大学</span><span class="item-remove"><i class="iconfont icon-delete"></i></span></li>
                     <li>
@@ -90,7 +90,7 @@
                 <h2 class="info-header"><i class="iconfont icon-weixin"></i> <span class="info-title" contenteditable="true">个人微信</span><span class="unit-remove"><i class="iconfont icon-delete"></i></span></h2>
                 <hr>
                 <div class="weixin">
-                    <img src="./简历生成器_files/weixin.png" alt="">
+                    <img src="./index_files/weixin.png" alt="">
 
                 </div>
             </div>
@@ -98,7 +98,7 @@
         </div>
         <div class="main">
             <div class="education info-unit right-list">
-                <h2 class="info-header"><i class="iconfont icon-education"></i> <span class="info-title" contenteditable="true">教育经历</span><span class="item-add" style="visibility: hidden;"><i class="iconfont icon-playlistadd"></i></span><span class="unit-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></h2>
+                <h2 class="info-header"><i class="iconfont icon-education"></i> <span class="info-title" contenteditable="true">教育经历</span><span class="item-add"><i class="iconfont icon-playlistadd"></i></span><span class="unit-remove"><i class="iconfont icon-delete"></i></span></h2>
                 <hr>
                 <ul class="experience-list">
                     <li>
@@ -106,7 +106,7 @@
                         <p contenteditable="true">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                         </p>
-                    <span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li>
+                    <span class="item-remove"><i class="iconfont icon-delete"></i></span></li>
                 </ul>
             </div>
             <div class="work info-unit right-list">
@@ -126,7 +126,7 @@
                 </ul>
             </div>
             <div class="project info-unit right-list">
-                <h2 class="info-header"><i class="iconfont icon-project"></i> <span class="info-title" contenteditable="true">个人项目</span><span class="item-add" style="visibility: hidden;"><i class="iconfont icon-playlistadd"></i></span><span class="unit-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></h2>
+                <h2 class="info-header"><i class="iconfont icon-project"></i> <span class="info-title" contenteditable="true">个人项目</span><span class="item-add"><i class="iconfont icon-playlistadd"></i></span><span class="unit-remove"><i class="iconfont icon-delete"></i></span></h2>
                 <hr>
                 <ul class="experience-list">
                     <li>
@@ -135,19 +135,19 @@
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam。Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                             <br>
                         </p>
-                    <span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li>
+                    <span class="item-remove"><i class="iconfont icon-delete"></i></span></li>
                     <li>
                         <h3 contenteditable="true">基于 Flask 的主机监视系统</h3>
                         <p contenteditable="true">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                         </p>
-                    <span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li>
+                    <span class="item-remove"><i class="iconfont icon-delete"></i></span></li>
                     <li>
                         <h3 contenteditable="true">基于 Live2D 与 clmtrackr 的山寨 Facerig</h3>
                         <p contenteditable="true">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                         </p>
-                    <span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li>
+                    <span class="item-remove"><i class="iconfont icon-delete"></i></span></li>
                     <li>
                         <h3 contenteditable="true">如果项目太少，可以在实验楼上找项目做啊:D</h3>
                         <p contenteditable="true">
