--- a/gyl/index.html
+++ b/gyl/index.html
@@ -15,7 +15,7 @@
     <div class="container" id="cv">
         <div class="side">
             <div class="me">
-                <div class="portrait" style="background-image: url(./index_files/gyl.jpg);"></div>
+                <div class="portrait" style="background-image: url(./index_files/gyl.png);"></div>
                 
                 <h1 id="username" contenteditable="true">郭杨路</h1>
                 <h4 id="persona-tag" contenteditable="true">Java / Web / 互联网教育</h4>
