--- a/gyl/index.html
+++ b/gyl/index.html
@@ -34,6 +34,8 @@
                         <label class="left-label" contenteditable="true">毕业年份</label><span class="label-value" contenteditable="true">2018</span><span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li>
                         <li>
                         <label class="left-label" contenteditable="true">工作年限</label><span class="label-value" contenteditable="true">3年</span><span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li>
+                        <li>
+                        <label class="left-label" contenteditable="true">期望薪资</label><span class="label-value" contenteditable="true">8k</span><span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li>
                 </ul>
             </div>
             <div class="contact info-unit">
