--- a/gyl/index.html
+++ b/gyl/index.html
@@ -116,11 +116,11 @@
                 <hr>
                 <ul class="experience-list">
                     <li>
-                        <h3 contenteditable="true">重庆华清远见－实习生（实习） 2017-2018</h3>
+                        <h3 contenteditable="true">重庆华清远见－实习生（实习） 2017（半年）</h3>
                         <p contenteditable="true">在此期间巩固学校学到的知识、并用于实践。独立开发了员工管理系统，模块涉及有：<div>1.用户管理模块2.部门管理模块3.用户进驻部门 等等</div></p>
                     <span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li>
                     <li>
-                        <h3 contenteditable="true">重庆南华中天信息技术有限公司－Java开发工程师 2018-至今</h3>
+                        <h3 contenteditable="true">重庆南华中天信息技术有限公司－Java开发工程师 2017-11-至今</h3>
                         <p contenteditable="true">工作内容：<div><div style="-webkit-tap-highlight-color: transparent; padding: 0px; border: 0px; font-family: &quot;PingFang SC&quot;, &quot;Microsoft YaHei&quot;, &quot;Lantinghei SC&quot;, &quot;Helvetica Neue&quot;, Helvetica, Arial, &quot;\\5FAE软雅黑&quot;, STHeitiSC-Light, simsun, &quot;\\5B8B体&quot;, &quot;WenQuanYi Zen Hei&quot;, &quot;WenQuanYi Micro Hei&quot;, sans-serif; color: rgb(51, 51, 51); font-size: 14px; background-color: rgb(255, 255, 255);">1、负责后台接口的开发与维护。根据产品需求，梳理出数据流程与业务流程;</div><div style="-webkit-tap-highlight-color: transparent; padding: 0px; border: 0px; font-family: &quot;PingFang SC&quot;, &quot;Microsoft YaHei&quot;, &quot;Lantinghei SC&quot;, &quot;Helvetica Neue&quot;, Helvetica, Arial, &quot;\\5FAE软雅黑&quot;, STHeitiSC-Light, simsun, &quot;\\5B8B体&quot;, &quot;WenQuanYi Zen Hei&quot;, &quot;WenQuanYi Micro Hei&quot;, sans-serif; color: rgb(51, 51, 51); font-size: 14px; background-color: rgb(255, 255, 255);">配合设计师和前端工程师实现产品迭代；</div><div style="-webkit-tap-highlight-color: transparent; padding: 0px; border: 0px; font-family: &quot;PingFang SC&quot;, &quot;Microsoft YaHei&quot;, &quot;Lantinghei SC&quot;, &quot;Helvetica Neue&quot;, Helvetica, Arial, &quot;\\5FAE软雅黑&quot;, STHeitiSC-Light, simsun, &quot;\\5B8B体&quot;, &quot;WenQuanYi Zen Hei&quot;, &quot;WenQuanYi Micro Hei&quot;, sans-serif; color: rgb(51, 51, 51); font-size: 14px; background-color: rgb(255, 255, 255);">2、持续优化后台架构，开发后台组件和服务，降低开发成本，提升开发效率。不断优化产品的用户体验。</div></div></p>
                     <span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li>
                 </ul>
