--- a/gyl/index.html
+++ b/gyl/index.html
@@ -148,7 +148,7 @@
                 <ul class="experience-list">
                     <li>
                         <h3 contenteditable="true">校奖学金</h3>
-                        <p contenteditable="true">在校期间每学期都可以获得一二三等奖学金</p>
+                        <p contenteditable="true">在校期间获得一等奖学金</p>
                     <span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li> 
                      
                                          
