--- a/gyl/index.html
+++ b/gyl/index.html
@@ -35,7 +35,7 @@
                 <li>
                         <label class="left-label" >工作经验</label><span class="label-value" >4年</span><span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li><li>
                         <label class="left-label" >手机/微信同号</label><span class="label-value" >15340560917</span><span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li><li>
-                        <label class="left-label" >期望薪资</label><span class="label-value" >11k</span><span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li></ul>
+                        <label class="left-label" >期望薪资</label><span class="label-value" >12k</span><span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li></ul>
             </div>
             
             
@@ -86,7 +86,7 @@
                 <ul class="experience-list">
                     <li>
                         <h3 >谷粒商城（分布式）</h3>
-                        <p ><span style="display: inline !important;">项目描述：该项目为一个电商项目，主要开发为后台管理系统，涉及模块有订单服务，商品服务，仓储服务，会员服务，优惠券服务，秒杀服务</span><div>项目架构：Springboot+SpringCloud+mybatis+vue+mysql+reids+docker&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<br></div><div>负责模块：商品服务以及项目搭建</div><div>技术要点：</div><div>1）docker容器技术启动mysql、redis</div><div>2）配置git-ssh，使用git统一管理项目</div><div>3）使用SpringCloud Nacos统一注册/发现服务，和统一配置</div><div>4）使用SpringCloud OpenFeign远程服务调用</div><div>5）使用SpringCloud Gateway网关技术，统一验证请求，然后进行过滤之后统一转发到微服务</div><div>6）开发商品服务三级分类，后端使用递归算法，前端vue实现拖拽更新商品分类的层级和排序</div><div>7）文件上传功能整合阿里云OSS对象存储服务，实现文件上传</div><div>8）整合springboot-elasticsearch，编写QUery DSL语句，完成商品全文检索功能</div><div>9）整合redison实现分布式锁，整合seata统一管理分布式事务一致性<div>10）编写统一异常处理</div>
+                        <p ><span style="display: inline !important;">项目描述：该项目为一个电商项目，主要开发为后台管理系统，涉及模块有订单服务，商品服务，仓储服务，会员服务，优惠券服务，秒杀服务</span><div>项目架构：Springboot+SpringCloud+mybatis+vue+mysql+reids+docker&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<br></div><div>业务范围：主导需求分析、数据库设计、功能模块流程设计、接口设计、数据库管理及优化、多数据源项目架构设计、项目异常统一处理、数据库事务处理、微服务项目环境搭建等</div><div>技术要点：</div><div>1）docker容器技术启动mysql、redis</div><div>2）配置git-ssh，使用git统一管理项目</div><div>3）使用SpringCloud Nacos统一注册/发现服务，和统一配置</div><div>4）使用SpringCloud OpenFeign远程服务调用</div><div>5）使用SpringCloud Gateway网关技术，统一验证请求，然后进行过滤之后统一转发到微服务</div><div>6）开发商品服务三级分类，后端使用递归算法，前端vue实现拖拽更新商品分类的层级和排序</div><div>7）文件上传功能整合阿里云OSS对象存储服务，实现文件上传</div><div>8）整合springboot-elasticsearch，编写QUery DSL语句，完成商品全文检索功能</div><div>9）整合redison实现分布式锁，整合seata统一管理分布式事务一致性<div>10）编写统一异常处理</div>
                         </p>
                     <span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li>
                     <li>
